Bug 318323 - No Message body after 'Send Again…' of encrypted email
Summary: No Message body after 'Send Again…' of encrypted email
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.10.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 334001 345976 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-04-14 07:19 UTC by Bernhard Scheirle
Modified: 2015-04-28 08:07 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Scheirle 2013-04-14 07:19:30 UTC
The composer body is empty after hitting 'Send Again…' on a encrypted email.

Reproducible: Always

Steps to Reproduce:
1. Send an encrypted email
2. Go to the folder where your sended emails are.
3. Right click on the encrypted email
4. Hit 'Send Again…'
Actual Results:  
A composer opens with no email body. But with a 'msg.asc' attachment.

Expected Results:  
The encrypted body should be decrypted and visible in the composer.
Comment 1 Sandro Knauß 2013-04-14 15:11:07 UTC
I can confirme also for master.
* Triggered for OpenPGP Mime encryption.
* Inline Encryption is correct.
* SMIME: no attached file/ no content.
Comment 2 Tobias 2015-01-31 23:27:38 UTC
This also applies when trying to edit a mail that is in the outbox but not already send.
Only decrypting for viewing works.
Should I report this as a new bug?

Observerd on KMail 4.13.3.
Comment 3 Sandro Knauß 2015-04-08 10:52:43 UTC
*** Bug 345976 has been marked as a duplicate of this bug. ***
Comment 4 quazgar 2015-04-08 11:04:44 UTC
Probably another duplicate: #334001
Comment 5 quazgar 2015-04-08 11:05:13 UTC
*** Bug 334001 has been marked as a duplicate of this bug. ***
Comment 6 Sandro Knauß 2015-04-28 08:07:21 UTC
Git commit da9639fc309d1dae4ad26a4ebd5c6c6874ecaa7f by Sandro Knauß.
Committed on 28/04/2015 at 08:05.
Pushed by knauss into branch 'KDE/4.14'.

Fix #318323: No Message body after 'Send Again…' of encrypted email

Search for attachments in the decrypted message and not only in the
unencrypted one.
REVIEW: 123415

M  +1    -1    kmail/editor/kmcomposewin.cpp
M  +3    -4    kmail/kmcommands.cpp
M  +18   -2    messagecomposer/composer/composerviewbase.cpp
M  +1    -0    messagecomposer/composer/composerviewbase.h
M  +136  -1    messagecomposer/tests/cryptocomposertest.cpp
M  +6    -0    messagecomposer/tests/cryptocomposertest.h

http://commits.kde.org/kdepim/da9639fc309d1dae4ad26a4ebd5c6c6874ecaa7f