Fix #318323: No Message body after 'Send Again…' of encrypted email

Search for attachments in the decrypted message and not only in the
unencrypted one.

BUG: 318323
REVIEW: 123415