messagecomposer/composer/composerviewbase.cpp
@@ -131,7 +131,12 @@ bool MessageComposer::ComposerViewBase::isComposing() const
     return !m_composers.isEmpty();
 }
 
-void MessageComposer::ComposerViewBase::setMessage ( const KMime::Message::Ptr& msg )
+void MessageComposer::ComposerViewBase::setMessage(const KMime::Message::Ptr &newMsg)
+{
+    setMessage(newMsg, false);                        // Do not decrypt message by default (old behaviour)
+}
+
+void MessageComposer::ComposerViewBase::setMessage ( const KMime::Message::Ptr& msg, bool allowDecryption )
 {
     if (m_attachmentModel)  {
         foreach( MessageCore::AttachmentPart::Ptr attachment, m_attachmentModel->attachments() )
@@ -169,6 +174,7 @@ void MessageComposer::ComposerViewBase::setMessage ( const KMime::Message::Ptr& 
     msgContent->parse();
     MessageViewer::EmptySource emptySource;
     MessageViewer::ObjectTreeParser otp( &emptySource );//All default are ok
+    emptySource.setAllowDecryption(allowDecryption);
     otp.parseObjectTree( msgContent );
 
     // Load the attachments
@@ -177,7 +183,17 @@ void MessageComposer::ComposerViewBase::setMessage ( const KMime::Message::Ptr& 
     std::vector<KMime::Content*>::const_iterator end( ac.attachments().end() );
     for ( std::vector<KMime::Content*>::const_iterator it = ac.attachments().begin();
           it != end ; ++it ) {
-        addAttachmentPart( *it );
+        if (otp.nodeHelper()->partMetaData((*it)->parent()).isEncrypted) {                  // gpg mime has a msg.asc as subelement, that is recognized as attachment
+            MessageCore::AttachmentCollector acEnc;
+            acEnc.collectAttachmentsFrom(otp.nodeHelper()->decryptedNodeForContent((*it)->parent()));
+            std::vector<KMime::Content*>::const_iterator endEnc( acEnc.attachments().end() );
+            for ( std::vector<KMime::Content*>::const_iterator itEnc = acEnc.attachments().begin();
+                  itEnc != endEnc ; ++itEnc ) {
+                addAttachmentPart( *itEnc );
+            }
+        } else {
+            addAttachmentPart( *it );
+        }
     }
 
     int transportId = -1;
