messagecomposer/tests/cryptocomposertest.h
@@ -45,6 +45,12 @@ class CryptoComposerTest : public QObject
     void testSignEncryptLateAttachments();
     void testSignEncryptLateAttachments_data();
 
+    void testEditEncryptAttachments();
+    void testEditEncryptAttachments_data();
+
+    void testEditEncryptAndLateAttachments();
+    void testEditEncryptAndLateAttachments_data();
+
     // secondary recipients
     void testBCCEncrypt();
     void testBCCEncrypt_data();
